# MinimalWasm

./: .gitignore  CMakeLists.txt  README.md  build.py
cmake-build/: CMakeCache.txt
include/: dummy_engine.h
sample/: app.js  worker.js
samples/: worker.js
src/: bindings.cpp  dummy_engine.cpp  parallel_tools.cpp
